# Machine-Learning-and-Neural-Networks

./: .gitignore  README.md  pyproject.toml
notebooks/: Data cleaning.ipynb  Exploratory data analysis.ipynb
utils/: data_cleaning.py  download_dataset.py  exploratory_data_analysis.py
