[project]
name = "machine-learning-and-neural-networks"
version = "0.1.0"
description = "Fully completed Machine learning Pipeline based on \"Bike Sharing Demand\" dataset."
authors = [
    { name = "Piotr Matusiewicz", email = "pmatusieiwcz@student.agh.edu.pl" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "statmodels",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
]
